testsuite/tests/deriving/should_fail/T3101.hs
{-# LANGUAGE TypeFamilies #-}
{-# LANGUAGE RankNTypes #-}

module T3101 where

type family F a :: *

data Boom = Boom (forall a. a -> F a)
  deriving Show
